--- a/.github/workflows/scan-web.yaml
+++ b/.github/workflows/scan-web.yaml
@@ -14,12 +14,20 @@ jobs:
       - uses: actions/checkout@v4
       - name: Snyk Node Scan
         uses: snyk/actions/node@master
+        id: snyk
         continue-on-error: true # allow to continue with report upload
         env:
           SNYK_TOKEN: ${{ SNYK_TOKEN }}
         with:
           args: --sarif-file-output=snyk-web.sarif
+
       - name: Upload report
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif-file: snyk-web.sarif
+
+      - name: Vulnerability Check
+        if: steps.snyk.outcome == 'failure'
+        run: |
+          echo "❌ Snyk found vulnerabilities."
+          exit 1
