--- a/web/package.json
+++ b/web/package.json
@@ -63,7 +63,7 @@
 		"tailwind-merge": "^3.3.1",
 		"tailwind-variants": "^3.1.1",
 		"tailwindcss": "^4.1.13",
-		"testcontainers": "^11.7.1",
+		"testcontainers": "^11.10.0",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.2",
 		"typescript-eslint": "^8.44.1",
@@ -77,7 +77,16 @@
 	"pnpm": {
 		"onlyBuiltDependencies": [
 			"esbuild"
-		]
+		],
+		"overrides": {
+			"cookie@<0.7.0": ">=0.7.0",
+			"vite@>=7.1.0 <=7.1.10": ">=7.1.11",
+			"tar@=7.5.1": ">=7.5.2",
+			"js-yaml@<3.14.2": ">=3.14.2",
+			"js-yaml@>=4.0.0 <4.1.1": ">=4.1.1",
+			"glob@>=10.2.0 <10.5.0": ">=10.5.0",
+			"jws@<3.2.3": ">=3.2.3"
+		}
 	},
 	"dependencies": {
 		"@opentelemetry/auto-instrumentations-node": "^0.67.2",
